[package]
name = "pinegui"
version = "0.1.0"
edition = "2021"
authors = ["za-songguo <zasongguo@outlook.com>"]
license = "MIT"
description = "An Rust embedded GUI library."
repository = "https://github.com/za-songguo/pinegui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
